syntax = "proto3";
package options.gloo.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/options";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;

// See envoy docs for details:
// https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/cluster/v3/cluster.proto#config-cluster-v3-cluster-lbsubsetconfig
message SubsetSpec {
  // Defines the set of subsets of the upstream
  repeated Selector selectors = 1;
  // The behavior used when no endpoint subset matches the selected routeâ€™s metadata
  // The default value is ANY_ENDPOINT
  FallbackPolicy fallbackPolicy = 2;
  // Specifies the default subset of endpoints used during fallback if fallback_policy is DEFAULT_SUBSET
  Subset default_subset = 3;
}

message Selector {
  // A subset is created for each unique combination of key and value
  repeated string keys = 1;
  // Selects a mode of operation in which each subset has only one host. Default is false.
  bool single_host_per_subset = 2;
}

message Subset {
  // Any host that matches all key/value pairs is part of this subset
  map<string, string> values = 1;
}

enum FallbackPolicy {
  // Any cluster endpoint may be returned (default)
  ANY_ENDPOINT = 0;
  // Load balancing over the endpoints matching the values from the default_subset field
  DEFAULT_SUBSET = 1;
  // A result equivalent to no healthy hosts is reported
  NO_FALLBACK = 2;
}
